Fix English l10n errors.  Align label for English.

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a:hover
 label > span:first-child
 {
    display: inline-block;
-   min-width: 100px;
+   min-width: 130px;
 }
 input, select, textarea
 {
